--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,11 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:id="@+id/main_activity"
-    tools:context=".MainActivity"
+    tools:context=".Activities.MainActivity"
     android:weightSum="10">
 
     <include
         layout="@layout/toolbar"/>
-
-
 
 
     <LinearLayout
@@ -51,7 +49,8 @@
                     android:id="@+id/fab"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="32dp"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginBottom="64dp"
                     android:layout_gravity="bottom|end"
                     android:clickable="true"
                     android:focusable="true"
@@ -61,51 +60,6 @@
 
         </RelativeLayout>
     </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/ll_locations"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical"
-        android:orientation="vertical"
-        android:layout_weight="5"
-        android:visibility="gone">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <Button
-                android:id="@+id/btn_like"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/btn_style"
-                android:textAllCaps="false"
-                android:text="Like"
-                android:textColor="@color/colorPrimary"
-                android:layout_alignParentEnd="true"/>
-
-            <Button
-                android:id="@+id/btn_dislike"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/btn_style"
-                android:textAllCaps="false"
-                android:text="Dislike"
-                android:textColor="@color/colorPrimary"
-                android:layout_toLeftOf="@+id/btn_like"/>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_playlist"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scrollbars="vertical"
-                android:layout_marginTop="5dp"/>
-
-        </RelativeLayout>
-
-    </LinearLayout>
-
 </LinearLayout>
 
 
