--- a/app/src/main/res/layout/playlist_item.xml
+++ b/app/src/main/res/layout/playlist_item.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
-    app:cardCornerRadius="5dp">
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="75dp"
+    android:background="@color/black">
 
     <RelativeLayout
         android:id="@+id/friend_item"
-        android:layout_width="wrap_content"
-        android:layout_height="72dp">
+        android:layout_width="match_parent"
+        android:layout_height="72dp"
+        android:background="@color/white">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/image"
@@ -57,4 +58,4 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 
     </RelativeLayout>
 
-</androidx.cardview.widget.CardView>
+</LinearLayout>
