--- a/app/src/main/res/layout/playlist_item.xml
+++ b/app/src/main/res/layout/playlist_item.xml
@@ -22,7 +22,7 @@
             android:layout_marginTop="12dp"
             android:layout_marginEnd="24dp"
             android:layout_marginRight="24dp"
-            tools:srcCompat="@mipmap/ic_launcher" />
+            tools:srcCompat="@mipmap/spotfoxxicon" />
 
         <TextView
             android:id="@+id/track_name"
