--- a/app/src/main/res/drawable-v24/btn_style.xml
+++ b/app/src/main/res/drawable-v24/btn_style.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 <stroke android:width="2dp" android:color="@color/white"/>
     <corners android:radius="20dp" />
-    <solid android:color="@color/colorPrimary" />
+    <solid android:color="@color/colorPrimaryDark" />
     <padding
         android:top="15dp"
         android:bottom="15dp"
