--- a/app/src/main/res/layout/marker_click_layout.xml
+++ b/app/src/main/res/layout/marker_click_layout.xml
@@ -30,20 +30,23 @@
         android:maxLines="1"
         android:textColor="#FFF"
         android:textSize="15sp"
-
         android:text="Playlist Name"/>
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_playlist"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="vertical"
+        android:layout_margin="5dp"
+        android:layout_weight="1"/>
+
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        >
 
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_playlist"
-            android:layout_width="match_parent"
-            android:layout_height="440dp"
-            android:scrollbars="vertical"
-            android:layout_margin="5dp"/>
 
         <Button
             android:id="@+id/btn_like"
@@ -52,9 +55,11 @@
             android:background="@drawable/btn_style"
             android:textAllCaps="false"
             android:text="Like"
-            android:layout_below="@+id/rv_playlist"
+            android:layout_margin="5dp"
             android:textColor="@color/white"
-            android:layout_alignParentEnd="true"/>
+            android:layout_weight="1"
+            android:layout_alignParentEnd="true"
+            />
 
         <Button
             android:id="@+id/btn_dislike"
@@ -63,9 +68,11 @@
             android:background="@drawable/btn_style"
             android:textAllCaps="false"
             android:text="Dislike"
-            android:layout_below="@+id/rv_playlist"
+            android:layout_margin="5dp"
             android:textColor="@color/white"
-            android:layout_toLeftOf="@+id/btn_like"/>
+            android:layout_toLeftOf="@+id/btn_like"
+
+            />
 
 
     </RelativeLayout>
